--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
+    "angularfire2": "^5.0.0-rc.6",
     "com.wikitude.phonegap.wikitudeplugin": "file:Wikitude_Cordova_Plugin_7-2-1_3-5-2_2018-02-21_15-01-01",
+    "firebase": "^4.13.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.10",
