--- a/package.json
+++ b/package.json
@@ -22,12 +22,24 @@
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
     "@ionic-native/core": "4.7.0",
+    "@ionic-native/device-motion": "^4.7.0",
+    "@ionic-native/device-orientation": "^4.7.0",
     "@ionic-native/geolocation": "^4.7.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.6",
+    "com.wikitude.phonegap.WikitudePlugin": ".\\Wikitude_Cordova_Plugin_7-2-1_3-5-2_2018-02-21_15-01-01",
     "com.wikitude.phonegap.wikitudeplugin": "file:Wikitude_Cordova_Plugin_7-2-1_3-5-2_2018-02-21_15-01-01",
+    "cordova-android": "7.0.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-device-motion": "^2.0.1",
+    "cordova-plugin-device-orientation": "^2.0.1",
+    "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^4.13.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -42,7 +54,18 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "com.wikitude.phonegap.WikitudePlugin": {}
-    }
+      "com.wikitude.phonegap.WikitudePlugin": {},
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-device-motion": {},
+      "cordova-plugin-device-orientation": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
