--- a/package.json
+++ b/package.json
@@ -26,11 +26,18 @@
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
     "com.wikitude.phonegap.wikitudeplugin": "file:Wikitude_Cordova_Plugin_7-2-1_3-5-2_2018-02-21_15-01-01",
+    "cordova-android": "7.0.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.10",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.26",
+    "cordova-plugin-whitelist": "1.3.3",
+    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-ionic-webview": "1.1.19",
+    "cordova-plugin-ionic-keyboard": "2.0.5",
+    "com.wikitude.phonegap.WikitudePlugin": ".\\Wikitude_Cordova_Plugin_7-2-1_3-5-2_2018-02-21_15-01-01"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.9",
@@ -39,7 +46,15 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "com.wikitude.phonegap.WikitudePlugin": {}
-    }
+      "com.wikitude.phonegap.WikitudePlugin": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
